@@ -7,6 +7,7 @@ TMW.CHANGELOG = {
 [==[* Fixed the missing slider value text for the Unit Level condition.]==],
 [==[* The Haste conditions no longer have a hard cap of 100%.]==],
 [==[* Fixed a false error that would display during configuring while using the [Range] DogTag.]==],
+[==[* Fixed an error relating to refreshing the tooltip for non-button widgets.]==],
 [==[]==],
 [==[===v7.0.1===]==],
 [==[* Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.]==],
